--- a/WozARdSmartWatch/AndroidManifest.xml
+++ b/WozARdSmartWatch/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.sonyericsson.extras.liveware.extension.controlsample"
+      package="com.sonymobile.wozard.smartwatch"
       android:versionName="1.0.1" android:versionCode="10001">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"/>
 
